--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,4 +1,4 @@
-﻿name: 'SourceCrafter.MappingGenerator: Build, Test & Deploy'
+﻿name: 'SourceCrafter.Mapifier: Build, Test & Deploy'
 
 on:
   push:
@@ -6,112 +6,168 @@ on:
 
 jobs:
   try-deliver:
-    name: '.NET 7 Build, Test & Deploy'
+    name: '.NET 8 Build, Test & Deploy'
     runs-on: 'ubuntu-latest'
 
-    steps:      
-    - name: Get source code
-      uses: actions/checkout@v3
+    steps:
 
-    - name: Setup .NET
-      uses: actions/setup-dotnet@v3
-      with:
-        dotnet-version: 7.0.x
-
-    - name: Restore dependencies
-      run: dotnet restore
-
-    - name: Test
-      run: |
-        dotnet test SourceCrafter.MappingGenerator.UnitTests/SourceCrafter.MappingGenerator.UnitTests.csproj --verbosity normal -c Release
-
-    - name: Pack
-      if: github.ref_name == 'dev'
-      run: |
-        # Combine all parts into a version string
-        version=""$(( $(date --date='now' +%Y) - $(date -d @${{ github.event.repository.created_at }} +%Y) )).$(date +%y).$(date +%j).$(( $(date +%H%M) / 5 ))""
-        echo "VERSION=${version}" >> $GITHUB_ENV
-
-        dotnet pack SourceCrafter.MappingGenerator/SourceCrafter.Bindings.csproj --verbosity normal -c Pack /p:PackageVersion="$version"
-    
-    - name: Publish to Nuget
-      if: github.ref_name == 'dev' && startsWith(github.event.head_commit.message, '[Release]')
-      run: |
-        package="$(find . -wholename '**/Pack/*.nupkg' -exec echo "{}" \;)"
-        dotnet nuget push $package --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
+      - name: Get source code
+        uses: actions/checkout@v3
         
-    - name: Notify Release to Github & Telegram
-      if: always()
-      shell: pwsh
-      env:        
-         GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
-      run: |
-        function escape {
-          param (
-              [string]$text
-          )
-          return $text -replace '([_\*\[\]\(\)~`>#\+\-=|{}\.!])', '\$1'
-        }
+      - name: Save GitHub Event Payload
+        run: |
+          cat <<EOF > github_event.json
+          ${{ toJson(github.event) }}
+          EOF
 
-        function releaseTrimming {
-          param (
-            [string]$text
-          )
-          return $( $text -replace '^\[Release\]\s*', '' )
-        }
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v3
+        with:
+          dotnet-version: 8.0.x
 
-        $isRelease = "${{ github.event.head_commit.message }}" -match '^\[Release\]\s*'
+      - name: Restore dependencies
+        run: |
+          output=$(dotnet restore SourceCrafter.Mapifier/SourceCrafter.Mapifier.csproj | awk '/: error / { print }')
+          
+          if [ "${#output}" -ne 0 ]; then
+            echo -e "Test errors:
+          $output" >> errors.log
+          fi
+          
+          output=$(dotnet restore SourceCrafter.Mapifier.UnitTests/SourceCrafter.Mapifier.UnitTests.csproj | awk '/: error / { print }')
+          
+          if [ "${#output}" -ne 0 ]; then
+            echo -e "Test errors:
+          $output" >> errors.log
+          fi     
 
-        $headCommit = $( releaseTrimming "${{ github.event.head_commit.message }}" )
+      - name: Test
+        id: test
+        run: |
+          output=$(dotnet test SourceCrafter.Mapifier.UnitTests/SourceCrafter.Mapifier.UnitTests.csproj -c Release | awk '/: error / { print }')
+  
+          if [ "${#output}" -ne 0 ]; then
+            echo -e "Test errors:
+          $output" >> errors.log
+          fi
 
-        $commits = '${{ toJson(github.event.commits) }}' | ConvertFrom-Json
+      - name: Pack
+        if: github.ref_name == 'dev'
+        run: |
+          created_year=$( date -d @${{ github.event.repository.created_at }} +%Y )
+          version=""$(( $(date --date='now' +%Y) - $created_year )).$(date +%y).$(date +%j).$(( $(date +%H%M) / 5 ))""
+          echo "VERSION=${version}" >> $GITHUB_ENV
+          
+          output=$(dotnet pack SourceCrafter.Mapifier/SourceCrafter.Mapifier.csproj --verbosity normal -c Pack /p:PackageVersion="$version" | awk '/: error / { print }')
+          
+          if [ "${#output}" -ne 0 ]; then
+            echo -e "Pack errors:
+          $output" >> errors.log
+          fi
 
-        $status, $icon, $message = if ('${{ job.status }}' -eq 'failure') { 
-          'failed', '💥', "Errors: ${{ steps.build.outputs.errors }}
-            ${{ steps.build.publish.errors }}".Trim()
-        } elseif ('${{ job.status }}' -eq 'success') { 
-          'successfully completed', '✅', $headCommit 
-        } else { 
-          'cancelled', '⛔', 'User aborted the action' 
-        }
-        
-        $message = @"
-        🚀 *$(escape '${{ github.workflow }}')* \#1 Build $status ✅
-        👤 *Triggered by:* $(escape 'pedro-gilmora')
-        🌿 *Branch:* ${{ github.ref_name }}
-        🔗 *Change:* *[ $( "${{ github.event.head_commit.id }}".Substring(0,8) ) ]( $(escape "https://github.com/${{ github.event.head_commit.author.username }}") )*
+      - name: Publish to Nuget
+        id: publish
+        if: github.ref_name == 'dev' && startsWith(github.event.head_commit.message, '[Release]')
+        run: |
+          package="$(find . -wholename '**/Pack/*.nupkg' -exec echo "{}" \;)"
+          
+          output=$(dotnet nuget push $package --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json | awk '/: error / { print }')
+          
+          if [ "${#output}" -ne 0 ]; then
+            echo -e "Publish errors:
+          $output" >> errors.log
+          fi
 
-        *$(escape $headCommit)*
+      - name: Notify Release to Github & Telegram
+        if: always()
+        shell: pwsh
+        env:
+          GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
+        run: |
+          # Load the event payload as JSON
+          $githubEvent = @{}          
+          if(Test-Path ./github_event.json) {
+            $githubEvent = Get-Content -Path ./github_event.json -Raw | ConvertFrom-Json
+          }
 
-        $(if($commits.Length -gt 1) { 
-        [string]::Join(" 
-        ", $( $commits | Select -Skip 1 | ForEach-Object { "[$($_.id.Substring(0,8))]($(escape $_.url)): $(escape $( releaseTrimming $_.message ) )
-          by [$(escape $_.author.username)]( $(escape https://github.com/$($_.author.username)) )" }))
-        })
-        "@.Trim()
+          # Load errors from errors.log
+          $errors = ""
+          if (Test-Path "./errors.log") {
+            echo "Found errors log file"
+            $errors = $( Get-Content -Path "./errors.log" )
+          }
 
-        Write-Host $message
+          echo "These are the errors: [$errors]"
 
-        $uri = "https://api.telegram.org/bot${{ secrets.TGBOT_TOKEN }}/sendMessage"
+          function escape ([string] $text) 
+          {
+            return $text -replace "([_\*\[\]\(\)~``>#\+\-=|{}\.!`"'])", '\$1'
+          }
 
-        $body = @{
+          function releaseTrimming ([string] $text) 
+          {
+            return $text -replace '^\[Release\]\s*', '' -replace '"', '\"'
+          }
+
+          $isRelease = $githubEvent.head_commit.message -match '^\[Release\]\s*'
+          $headCommit = releaseTrimming $githubEvent.head_commit.message
+          $commits = [System.Collections.Stack]::new( $githubEvent.commits )
+          $failed = '${{ job.status }}' -eq 'failure'
+
+          #echo $commits
+
+          $status, $icon, $message = if ($failed) {
+            'failed', '💥', $errors
+          } elseif ('${{ job.status }}' -eq 'success') {
+            'successfully completed', '✅', $headCommit
+          } else {
+            'cancelled', '⛔', 'User aborted the action'
+          }
+
+          $message = @"
+          🚀 *$(escape '${{ github.workflow }}')* \#${{ github.run_number }} Build $status $icon
+          👤 *Triggered by:* [$( escape "${{ github.triggering_actor }}" )](https://github.com/$( escape "${{ github.triggering_actor }}" ))
+          🌿 *Branch:* $( escape "${{ github.ref_name }}" )
+          🔗 *Change:* *[$( $githubEvent.head_commit.id.Substring(0,8) )]($( escape $githubEvent.head_commit.url ))*
+  
+          *$(escape ( releaseTrimming $githubEvent.head_commit.message) )*$(if($commits.Count -gt 1 ) { "
+          
+          $([string]::Join("
+          ", $( $commits | 
+          Select -Skip 1 | 
+          ForEach-Object { 
+              "🔹[$($_.id.Substring(0,8))]($(escape $_.url)): $(escape ( releaseTrimming $_.message ) )
+            by [$(escape $_.author.username)]($( escape https://github.com/$($_.author.username) ))"
+          })))"
+          })$( if($errors) { "
+          
+          ``````
+          $( escape $errors.Trim() )
+          ``````" } )
+          "@
+          
+          if( $isRelease -and -not $failed ) 
+          {
+            gh release create v${{ env.VERSION }} -t "$(releaseTrimming $githubEvent.head_commit.message)" -n $(if($commits.Count -gt 1) { "| ID | Message | Author |
+            |---|---|---|
+            $([string]::Join("
+          ", $( $commits | 
+              Select -Skip 1 | 
+              ForEach-Object { 
+                "| [$($_.id.Substring(0,8))]($($_.url)) | $( releaseTrimming $_.message ) | [$( $_.author.username )]( https://github.com/$($_.author.username) ) |"
+            })))"
+            } else { "" }) 
+          }
+  
+          Write-Host $message
+
+          $uri = "https://api.telegram.org/bot${{ secrets.TGBOT_TOKEN }}/sendMessage"
+
+          $body = @{
             chat_id = ${{ secrets.SC_CHATID }}
-            text    = $message
+            text = $message
             parse_mode = 'MarkdownV2'
             message_thread_id = 4
-        }
+          }
 
-        Invoke-RestMethod -Uri $uri -Method Post -Body $body
-
-        if( $isRelease )
-        {
-            $message = $(if($commits.Length -gt 1) { 
-        "| Commit    | Message              | Author         |
-         |-----------|----------------------|----------------|
-        " +
-        [string]::Join("
-        ", $( $commits | Select-Object -Skip 1 | ForEach-Object { "| [$($_.id.Substring(0,8))]($_.url)) | $( releaseTrimming $_.message ) | [$($_.author.username)](https://github.com/$($_.author.username))" }))} 
-        else { "" }).Trim()
-
-            gh release create "v${{ env.VERSION }}" --latest --title "$headCommit" --notes "$message"
-        }
+          Invoke-RestMethod -Uri $uri -Method Post -Body $body
