--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -27,14 +27,14 @@ jobs:
 
       - name: Restore dependencies
         run: |
-          output=$(dotnet restore SourceCrafter.Mappify/SourceCrafter.Mappify.csproj | awk '/: error / { print }')
+          output=$(dotnet restore SourceCrafter.appify/SourceCrafter.Mappify.csproj | awk '/: error / { print }')
           
           if [ "${#output}" -ne 0 ]; then
             echo -e "Test errors:
           $output" >> errors.log
           fi
           
-          output=$(dotnet restore SourceCrafter.MappingGenerator.UnitTests/SourceCrafter.MappingGenerator.UnitTests.csproj | awk '/: error / { print }')
+          output=$(dotnet restore SourceCrafter.appingGenerator.UnitTests/SourceCrafter.MappingGenerator.UnitTests.csproj | awk '/: error / { print }')
           
           if [ "${#output}" -ne 0 ]; then
             echo -e "Test errors:
@@ -44,7 +44,7 @@ jobs:
       - name: Test
         id: test
         run: |
-          output=$(dotnet test SourceCrafter.MappingGenerator.UnitTests/SourceCrafter.MappingGenerator.UnitTests.csproj -c Release | awk '/: error / { print }')
+          output=$(dotnet test SourceCrafter.appingGenerator.UnitTests/SourceCrafter.MappingGenerator.UnitTests.csproj -c Release | awk '/: error / { print }')
   
           if [ "${#output}" -ne 0 ]; then
             echo -e "Test errors:
@@ -58,7 +58,7 @@ jobs:
           version=""$(( $(date --date='now' +%Y) - $created_year )).$(date +%y).$(date +%j).$(( $(date +%H%M) / 5 ))""
           echo "VERSION=${version}" >> $GITHUB_ENV
           
-          output=$(dotnet pack SourceCrafter.Mappify/SourceCrafter.Mappify.csproj --verbosity normal -c Pack /p:PackageVersion="$version" | awk '/: error / { print }')
+          output=$(dotnet pack SourceCrafter.appify/SourceCrafter.Mappify.csproj --verbosity normal -c Pack /p:PackageVersion="$version" | awk '/: error / { print }')
           
           if [ "${#output}" -ne 0 ]; then
             echo -e "Pack errors:
